# Power-Grid-Demand-Response-Optimizer

./: .gitignore  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_STATUS.md  HF_SETUP_GUIDE.md  README.md  READY_FOR_SUBMISSION.md  SUBMISSION_CHECKLIST.md  VALIDATION_REPORT.md  environment.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_models.py  validate-submission.sh
server/: app.py  environment.py  models.py
