[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "power-grid-optimizer"
version = "1.0.0"
description = "Power Grid Demand-Response Optimizer"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "numpy",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
